src/objects/BC_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings Brunello Cucinelli</description>
    <fields>
        <fullName>BC_Ecommerce_ProfileId__c</fullName>
        <label>BC_Ecommerce_ProfileId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Customer_OwnerId__c</fullName>
        <label>Default Customer OwnerId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Transaction_OwnerId__c</fullName>
        <label>Default Transaction OwnerId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Batch_Class_Campaigns__c</fullName>
        <label>Email Batch Class Campaigns</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Id_Admin_Ten__c</fullName>
        <label>Id Admin Ten</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>BC - Settings</label>
</CustomObject>